# first-story

./: .gitignore  AGENTS.md  CLAUDE.md  frontend-structure-contract.test.mjs  关闭.bat  启动.bat  机制设计.md  架构总览.md  画板文档架构.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  chat.py  classify.py  documents.py  events.py  idea_cards.py  llm_config.py  modules.py  preferences.py  projects.py  state.py
backend/app/models/: __init__.py  api.py  characters.py  common.py  continuity.py  documents.py  events.py  facts.py  llm_config.py  modules.py  plot_events.py  preferences.py  project.py  state.py
backend/app/services/: __init__.py  alias_resolver.py  classify.py  context_summary.py  contradiction.py  dialogue.py  document.py  event_log.py  evidence_card.py  export.py  extraction.py  extraction_pipeline.py  fountain.py  hub.py  llm_config.py  llm_provider.py  module_document.py  module_parser.py  project.py  projector.py
backend/projects/proj_20260616214534_16a1f5c1/: project.json
backend/tests/: __init__.py  conftest.py  test_alias_resolver.py  test_api.py  test_chat_api.py  test_context_summary_trigger.py  test_contradiction.py  test_dialogue.py  test_documents.py  test_event_log.py  test_evidence_card.py  test_extraction.py  test_extraction_pipeline.py  test_fact_status.py  test_hub.py  test_import_export.py  test_llm_config.py  test_llm_provider.py  test_models.py  test_modules.py  test_project.py  test_projector.py  test_style_memo.py
docs/: api-contract.md  分层摘要设计.md  (+5 more)
(+127 files in other folders)
